--- a/user/html/signup.html
+++ b/user/html/signup.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Beauty & Blessed | Sign Up</title>
+  <title>Blessence| Sign Up</title>
+  <link rel="icon" href="../../admin/images/mainlogo.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600&display=swap"
@@ -1068,8 +1069,8 @@
 
   <div class="signup-container">
     <div class="logo">
-      <h1>Beauty & Blessed</h1>
-      <p>Elevate Your Everyday Glam.</p>
+      <h1>Blessence</h1>
+      <p>Beauty & Blessed Online Makeup Store</p>
     </div>
 
     <form id="signupForm" method="POST" action="../php/signup.php">
