--- a/user/html/checkout.html
+++ b/user/html/checkout.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beauty & Blessed | Generate QR</title>
+    <title>Blessence | Generate QR</title>
+    <link rel="icon" href="../../admin/images/mainlogo.png" type="image/png">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link
@@ -738,8 +739,8 @@
             <i class="fas fa-arrow-left"></i>
         </button>
         <div class="brand-header">
-            <h1 class="brand-name">Beauty & Blessed</h1>
-            <p class="brand-tagline">Elevate Your Everyday Glam.</p>
+            <h1 class="brand-name">Blessence</h1>
+            <p class="brand-tagline">Beauty & Blessed Online Makeup Store</p>
         </div>
         <!-- Empty div to maintain layout balance -->
         <div style="width: 44px;"></div>
