--- a/user/html/customer.preferences.html
+++ b/user/html/customer.preferences.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beauty & Blessed | My Preferences</title>
+    <title>Blessence | My Preferences</title>
+    <link rel="icon" href="../../admin/images/mainlogo.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
@@ -556,8 +557,8 @@
             <i class="fas fa-arrow-left"></i>
         </button>
         <div class="brand-header">
-            <h1 class="brand-name">Beauty & Blessed</h1>
-            <p class="brand-tagline">Elevate Your Everyday Glam.</p>
+            <h1 class="brand-name">Blessence</h1>
+            <p class="brand-tagline">Beauty & Blessed Online Makeup Store</p>
         </div>
         <!-- Empty div to maintain layout balance -->
         <div style="width: 44px;"></div>
