--- a/user/html/forgot-password.html
+++ b/user/html/forgot-password.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Beauty & Blessed | Forgot Password</title>
+  <title>Blessence | Forgot Password</title>
+  <link rel="icon" href="../../admin/images/mainlogo.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap"
@@ -578,7 +579,8 @@
 
   <div class="container">
     <div class="logo">
-      <h1>Beauty & Blessed</h1>
+      <h1>Blessence</h1>
+     
       <p>Reset Your Password</p>
     </div>
 
