--- a/user/html/login.html
+++ b/user/html/login.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Beauty & Blessed | Login</title>
+  <title>Blessence | Login</title>
+  <link rel="icon" href="../../admin/images/mainlogo.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap"
@@ -952,8 +953,8 @@
 
   <div class="login-container">
     <div class="logo">
-      <h1>Beauty & Blessed</h1>
-      <p>Elevate Your Everyday Glam.</p>
+      <h1 >Blessence</h1>
+      <p >Beauty & Blessed Online Makeup Store</p>
     </div>
 
     <form id="loginForm">
@@ -996,6 +997,14 @@
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
+      localStorage.removeItem('userId');
+    sessionStorage.clear();
+    
+    // Check if coming from logout
+    const urlParams = new URLSearchParams(window.location.search);
+    if (urlParams.get('logout') === 'true') {
+        console.log('Successfully logged out');
+    }
       function showToast(message) {
         const toast = document.getElementById("toast");
         // Safety check for the toast element
