--- a/admin/html/activity-log.html
+++ b/admin/html/activity-log.html
@@ -18,7 +18,7 @@
   <!-- SweetAlert2 CSS & JS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
-  
+
 
 
   <style>
@@ -512,7 +512,6 @@
             <img src="../images/mainlogo.png" alt="Store Logo" class="logo" />
           </a>
           <div class="store-name">Blessence</div>
-
         </div>
         <div class="nav flex-column">
           <a href="admin.html" class="nav-link">
@@ -535,15 +534,20 @@
             <i class="fa-solid fa-credit-card"></i>
             <span>Order Transaction</span>
           </a>
-          <a href="activity-log.html" class="nav-link active">
+          <a href="activity-log.html" class="nav-link">
             <i class="fa-solid fa-clock-rotate-left"></i>
             <span>Activity Log</span>
           </a>
+          <!-- New Cashier Mode Link -->
+          <a href="javascript:void(0)" class="nav-link cashier-mode-link" id="cashierModeLink">
+            <i class="fa-solid fa-cash-register"></i>
+            <span>Cashier Mode</span>
+          </a>
+
           <a id="logoutBtn" href="javascript:void(0)" class="nav-link">
             <i class="fa-solid fa-right-from-bracket"></i>
             <span>Log Out</span>
           </a>
-
         </div>
       </nav>
 
@@ -604,6 +608,32 @@
       </main>
     </div>
   </div>
+
+  <!-- Before closing </body> tag -->
+  <div class="reveal-overlay" id="revealOverlay"></div>
+  <div class="fullscreen-reveal" id="fullscreenReveal">
+    <div class="reveal-progress" id="revealProgress"></div>
+    <div class="fullscreen-reveal-content">
+      <div class="fullscreen-reveal-content">Entering Cashier Mode…</div>
+    </div>
+  </div>
+
+  <div class="cashier-mode-entry" id="cashierModeEntry">
+    <div class="cashier-logo-container">
+      <div class="cashier-logo">
+        <img src="../images/mainlogo.png" alt="Store Logo">
+      </div>
+      <div class="cashier-title">Entering Cashier Mode</div>
+      <div class="cashier-subtitle">Blessence Point of Sale</div>
+    </div>
+    <div class="cashier-loading">
+      <div class="cashier-loading-dot"></div>
+      <div class="cashier-loading-dot"></div>
+      <div class="cashier-loading-dot"></div>
+    </div>
+  </div>
+
+  <div class="cashier-tap-counter" id="cashierTapCounter"></div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -1018,6 +1048,25 @@
         });
       });
     }
+    // Highlight active sidebar link based on current URL
+    const highlightActiveNavLink = () => {
+      const navLinks = document.querySelectorAll('.sidebar .nav-link');
+      const currentPath = window.location.pathname.split('/').pop();
+
+      navLinks.forEach(link => {
+        const linkPath = link.getAttribute('href');
+        if (linkPath === currentPath) {
+          link.classList.add('active');
+        } else {
+          link.classList.remove('active');
+        }
+      });
+    };
+
+
+    highlightActiveNavLink();
+
+
 
   </script>
 </body>
