--- a/admin/html/customer-managemnet.html
+++ b/admin/html/customer-managemnet.html
@@ -14,7 +14,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <script src="../../admin/styles/logout.js"></script>
-  
+
   <!-- SweetAlert2 CSS & JS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
@@ -618,7 +618,6 @@
             <img src="../images/mainlogo.png" alt="Store Logo" class="logo" />
           </a>
           <div class="store-name">Blessence</div>
-
         </div>
         <div class="nav flex-column">
           <a href="admin.html" class="nav-link">
@@ -633,7 +632,7 @@
             <i class="fa-solid fa-lightbulb"></i>
             <span>Recommendation Insights</span>
           </a>
-          <a href="customer-managemnet.html" class="nav-link active">
+          <a href="customer-managemnet.html" class="nav-link">
             <i class="fa-solid fa-users"></i>
             <span>Customer Management</span>
           </a>
@@ -645,6 +644,12 @@
             <i class="fa-solid fa-clock-rotate-left"></i>
             <span>Activity Log</span>
           </a>
+          <!-- New Cashier Mode Link -->
+          <a href="javascript:void(0)" class="nav-link cashier-mode-link" id="cashierModeLink">
+            <i class="fa-solid fa-cash-register"></i>
+            <span>Cashier Mode</span>
+          </a>
+
           <a id="logoutBtn" href="javascript:void(0)" class="nav-link">
             <i class="fa-solid fa-right-from-bracket"></i>
             <span>Log Out</span>
@@ -848,6 +853,32 @@
       </main>
     </div>
   </div>
+
+  <!-- Before closing </body> tag -->
+  <div class="reveal-overlay" id="revealOverlay"></div>
+  <div class="fullscreen-reveal" id="fullscreenReveal">
+    <div class="reveal-progress" id="revealProgress"></div>
+    <div class="fullscreen-reveal-content">
+      <div class="fullscreen-reveal-content">Entering Cashier Mode…</div>
+    </div>
+  </div>
+
+  <div class="cashier-mode-entry" id="cashierModeEntry">
+    <div class="cashier-logo-container">
+      <div class="cashier-logo">
+        <img src="../images/mainlogo.png" alt="Store Logo">
+      </div>
+      <div class="cashier-title">Entering Cashier Mode</div>
+      <div class="cashier-subtitle">Blessence Point of Sale</div>
+    </div>
+    <div class="cashier-loading">
+      <div class="cashier-loading-dot"></div>
+      <div class="cashier-loading-dot"></div>
+      <div class="cashier-loading-dot"></div>
+    </div>
+  </div>
+
+  <div class="cashier-tap-counter" id="cashierTapCounter"></div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
