--- a/admin/html/product-management.html
+++ b/admin/html/product-management.html
@@ -14,7 +14,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <script src="../../admin/styles/logout.js"></script>
-  
+
   <!-- SweetAlert2 CSS & JS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
@@ -1475,6 +1475,12 @@
             <i class="fa-solid fa-clock-rotate-left"></i>
             <span>Activity Log</span>
           </a>
+          <!-- New Cashier Mode Link -->
+          <a href="javascript:void(0)" class="nav-link cashier-mode-link" id="cashierModeLink">
+            <i class="fa-solid fa-cash-register"></i>
+            <span>Cashier Mode</span>
+          </a>
+
           <a id="logoutBtn" href="javascript:void(0)" class="nav-link">
             <i class="fa-solid fa-right-from-bracket"></i>
             <span>Log Out</span>
@@ -1921,6 +1927,32 @@
       </div>
     </div>
   </div>
+
+  <!-- Before closing </body> tag -->
+  <div class="reveal-overlay" id="revealOverlay"></div>
+  <div class="fullscreen-reveal" id="fullscreenReveal">
+    <div class="reveal-progress" id="revealProgress"></div>
+    <div class="fullscreen-reveal-content">
+      <div class="fullscreen-reveal-content">Entering Cashier Mode…</div>
+    </div>
+  </div>
+
+  <div class="cashier-mode-entry" id="cashierModeEntry">
+    <div class="cashier-logo-container">
+      <div class="cashier-logo">
+        <img src="../images/mainlogo.png" alt="Store Logo">
+      </div>
+      <div class="cashier-title">Entering Cashier Mode</div>
+      <div class="cashier-subtitle">Blessence Point of Sale</div>
+    </div>
+    <div class="cashier-loading">
+      <div class="cashier-loading-dot"></div>
+      <div class="cashier-loading-dot"></div>
+      <div class="cashier-loading-dot"></div>
+    </div>
+  </div>
+
+  <div class="cashier-tap-counter" id="cashierTapCounter"></div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
