Nag linis ng ui

--- a/admin/html/recommendation-insights.html
+++ b/admin/html/recommendation-insights.html
@@ -561,7 +561,9 @@
     /* Responsive Design */
     @media (max-width: 991px) {
       .stats-grid {
+        display: grid;
         grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
       }
 
       .recommendation-item {
@@ -585,7 +587,9 @@
       }
 
       .stats-grid {
-        grid-template-columns: 1fr;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
       }
 
       .card-header-custom {
