--- a/admin/html/order-transactions.html
+++ b/admin/html/order-transactions.html
@@ -555,7 +555,9 @@
       }
 
       .stats-buttons {
+        display: grid;
         grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
       }
 
       .fixed-header {
@@ -569,7 +571,9 @@
 
     @media (max-width: 575px) {
       .stats-buttons {
-        grid-template-columns: 1fr;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
       }
 
       .filter-options {
